# DiagnosticIndexExtension

./: CMakeLists.txt  DiagnosticIndex.cmake  README.md  SuperBuild.cmake
CMake/: SlicerExtensionsConfigureMacros.cmake
DiagnosticIndex/: CMakeLists.txt  DiagnosticIndex.py
DiagnosticIndex/Resources/UI/: DiagnosticIndex.ui
SuperBuild/: External_statismo.cmake
src/: CMakeLists.txt
src/CLI/computeMean/: CMakeLists.txt  computeMean.cxx  computeMean.xml
src/CLI/computeShapeOALoads/: CMakeLists.txt  computeShapeOALoads.cxx  computeShapeOALoads.xml
src/CLI/saveModel/: CMakeLists.txt  saveModel.cxx  saveModel.xml
src/DiagnosticIndex/: CMakeLists.txt  DiagnosticIndex.py
src/DiagnosticIndex/Resources/UI/: DiagnosticIndex.ui
