cmake_minimum_required(VERSION 2.8.9)

project(DiagnosticIndexExtension)

#-----------------------------------------------------------------------------
# Extension meta-information
set(EXTENSION_NAME "DiagnosticIndex")
set(EXTENSION_HOMEPAGE "http://www.slicer.org/slicerWiki/index.php/Documentation/Nightly/Extensions/DiagnosticIndex")
set(EXTENSION_CATEGORY "Quantification")
set(EXTENSION_CONTRIBUTORS “Laura Pascal (DCBIA-OrthoLab, University of Michigan)")
set(EXTENSION_DESCRIPTION "TODO")
set(EXTENSION_ICONURL "TODO")
set(EXTENSION_SCREENSHOTURLS "TODO")
set(EXTENSION_DEPENDS ShapePopulationViewer)

#-----------------------------------------------------------------------------
# Extension dependencies
find_package(Slicer REQUIRED)
include(${Slicer_USE_FILE})

#-----------------------------------------------------------------------------
# Extension modules
add_subdirectory(DiagnosticIndex)
## NEXT_MODULE

#-----------------------------------------------------------------------------
include(${Slicer_EXTENSION_CPACK})
